v5.1.0 java 9 collections: generate java 9 is java version is at least 9