@@ -11,7 +11,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
 
@@ -35,7 +38,7 @@ public class FooTest {
 
     @Test
     public void testFight() throws Exception {
-        String result = foo.fight(new ArrayList<Fire>(Arrays.asList(new Fire())), "foeName");
+        String result = foo.fight(new ArrayList<>(List.of(new Fire())), "foeName");
         Assert.assertEquals("replaceMeWithExpectedResult", result);
     }
 
